Update list of posts

--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,7 +1,6 @@
 ---
-title: Functions for Beginners
-date: 'August 4, 2021'
-description: Learn how to create and use functions
+title: 'Functions for Beginners'
+date: 'Aug 4, 2021'
 ---
 
 <div>
