Remove "in the comments" from posts since I won't be adding comments

--- a/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
+++ b/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
@@ -479,5 +479,5 @@ You can find the complete code from this post [here](https://github.com/lucaspra
 I hope you enjoyed this post, please add any question, suggestion or anything in the comments below.
 
 <small>
-  "What about validations?" you may ask, well, I can write a blog post about it, just let me know if you want in the comments below 👍
+  "What about validations?" you may ask, well, I can write a blog post about it, ping on twitter if you want to see my approach for that 👍
 </small>
