--- a/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
+++ b/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
@@ -62,6 +62,4 @@ With that you have a `PUBLIC_CONFIGS` object available to use anywhere in your f
 />
 ```
 
-----
-
-This approach is something I had to figure out by myself for a project, do you have a better idea about how to do the same? Please let me know in the comments. Thanks.
+This approach is something I had to figure out by myself for a project, do you have a better idea about how to do the same? Please ping on twitter. Thanks.
