Add tags to posts

--- a/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
+++ b/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
@@ -1,8 +1,8 @@
 ---
 title: A year of ruby meetups in Kitchener
 date: 'Dec 12, 2019'
-# tags:
-  # - community
+tags:
+  - community
 ---
 
 I've been living in Kitchener for over an year and in the first time I attended to the ruby workshop I created my [first PR](https://github.com/rails/rails/pull/34233) to Rails 🎉
