--- a/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
+++ b/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
@@ -1,9 +1,9 @@
 ---
 title: Expanding Rails' STI to your architecture
 date: 'Jun 22, 2020'
-# tags:
-#   - architecture
-#   - rails
+tags:
+  - architecture
+  - rails
 ---
 
 Let's say we need to create integrations with multiple ecommerce platforms that are somewhat similar where all them have orders, customers, products and the store itself, in this scenario we could use one model for each of these entities.
