--- a/posts/2020-06-22-fish-the-shell.mdx
+++ b/posts/2020-06-22-fish-the-shell.mdx
@@ -1,6 +1,8 @@
 ---
 title: 🐠 Fish, the shell
 date: 'Jun 22, 2020'
+tags:
+  - terminal
 ---
 
 One of the greatest changes I've made to my set of programming tools was changing from zsh to [fish](https://fishshell.com/) and these are the reasons that drove me to this change:
