--- a/posts/2019-07-25-command-line-programs-i-use-in-a-day-to-day-basis.mdx
+++ b/posts/2019-07-25-command-line-programs-i-use-in-a-day-to-day-basis.mdx
@@ -1,8 +1,8 @@
 ---
 title:  Command line programs I use in a day-to-day basis
 date: 'Jul 25, 2019'
-# tags:
-# - terminal
+tags:
+- terminal
 ---
 
 ## xargs
