--- a/posts/2019-07-26-how-to-reload-your-vim-configs-without-exiting-vim.mdx
+++ b/posts/2019-07-26-how-to-reload-your-vim-configs-without-exiting-vim.mdx
@@ -1,9 +1,8 @@
 ---
 title: How to reload your vim configs without exiting vim
 date: 'Jul 26, 2019'
-# excerpt: "This can be very useful, I'm going to show how to reload your vim configs anytime you save them or using a command and a map."
-# tags:
-  # - vim
+tags:
+  - vim
 ---
 
 This can be very useful, I'm going to show how to reload your vim configs anytime you save them or using a command and a map.
