--- a/posts/2019-11-06-use-ctags-to-jump-to-definition-even-inside-ruby-gems.mdx
+++ b/posts/2019-11-06-use-ctags-to-jump-to-definition-even-inside-ruby-gems.mdx
@@ -1,8 +1,8 @@
 ---
 title: Use ctags to jump to definition even inside ruby gems
 date: 'Nov 6, 2019'
-# tags:
-#   - vim
+tags:
+  - vim
 ---
 If you don't know what ctags is:
 
