--- a/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
+++ b/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
@@ -1,6 +1,9 @@
 ---
 title: How to provide configs to React on Phoenix and esbuild
 date: 'Feb 18, 2022'
+tags:
+  - elixir
+  - phoenix
 ---
 
 I've seen a few blog posts about using environment variables on React/Vue/etc when they're part of a Phoenix app using webpack, but I didn't find much content about using esbuild. This post is about providing configs to your front-end when using esbuild.
