Add description to posts on RSS feed

--- a/posts/2019-07-26-how-to-reload-your-vim-configs-without-exiting-vim.mdx
+++ b/posts/2019-07-26-how-to-reload-your-vim-configs-without-exiting-vim.mdx
@@ -3,6 +3,7 @@ title: How to reload your vim configs without exiting vim
 date: 'Jul 26, 2019'
 tags:
   - vim
+description: "This can be very useful, I'm going to show how to reload your vim configs anytime you save them or using a command and a map."
 ---
 
 This can be very useful, I'm going to show how to reload your vim configs anytime you save them or using a command and a map.
