--- a/posts/2019-11-06-use-ctags-to-jump-to-definition-even-inside-ruby-gems.mdx
+++ b/posts/2019-11-06-use-ctags-to-jump-to-definition-even-inside-ruby-gems.mdx
@@ -3,6 +3,7 @@ title: Use ctags to jump to definition even inside ruby gems
 date: 'Nov 6, 2019'
 tags:
   - vim
+description: This is really helpful especially if you need to debug other people's gems or your own. 👌
 ---
 If you don't know what ctags is:
 
