--- a/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
+++ b/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
@@ -3,6 +3,7 @@ title: A year of ruby meetups in Kitchener
 date: 'Dec 12, 2019'
 tags:
   - community
+description: "Contributed to Rails and other open source projects, learned great things on talks, helped others with their projects and more!"
 ---
 
 I've been living in Kitchener for over an year and in the first time I attended to the ruby workshop I created my [first PR](https://github.com/rails/rails/pull/34233) to Rails 🎉
