--- a/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
+++ b/posts/2022-02-18-how-to-provide-configs-to-react-on-phoenix-and-esbuild.mdx
@@ -4,6 +4,7 @@ date: 'Feb 18, 2022'
 tags:
   - elixir
   - phoenix
+description: I've seen a few blog posts about using environment variables on React/Vue/etc when they're part of a Phoenix app using webpack, but I didn't find much content about using esbuild. This post is about providing configs to your front-end when using esbuild.
 ---
 
 I've seen a few blog posts about using environment variables on React/Vue/etc when they're part of a Phoenix app using webpack, but I didn't find much content about using esbuild. This post is about providing configs to your front-end when using esbuild.
