--- a/posts/2019-07-25-command-line-programs-i-use-in-a-day-to-day-basis.mdx
+++ b/posts/2019-07-25-command-line-programs-i-use-in-a-day-to-day-basis.mdx
@@ -3,6 +3,7 @@ title:  Command line programs I use in a day-to-day basis
 date: 'Jul 25, 2019'
 tags:
 - terminal
+description: xargs and awk are very useful when grepping and combining commands, but Alacritty is very impressive, if you run heavy terminal program I'd give it a try.
 ---
 
 ## xargs
