Add post The secret behind my productivity using the command line

--- a/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
+++ b/posts/2020-06-22-expanding-rails-sti-to-your-architecture.mdx
@@ -476,7 +476,7 @@ app/operations/
 
 You can find the complete code from this post [here](https://github.com/lucasprag/expanding-sti).
 
-I hope you enjoyed this post, please add any question, suggestion or anything in the comments below.
+I hope you enjoyed this post, please ping on twitter if you have any question, suggestion or just say hi. 👋
 
 <small>
   "What about validations?" you may ask, well, I can write a blog post about it, ping on twitter if you want to see my approach for that 👍
