--- a/posts/2020-06-22-fish-the-shell.mdx
+++ b/posts/2020-06-22-fish-the-shell.mdx
@@ -96,6 +96,6 @@ This is not a big deal for me compared with the benefits I listed above, but I u
 
 [Fish](https://fishshell.com/) is not new, but it can be new to you as it was to me. If you like to try new programming things, I suggest fish. 🐠
 
-I hope you enjoyed this post, please add any question, suggestion or anything in the comments below. 👍
+I hope you enjoyed this post, please ping on twitter if you have any question, suggestion or just say hi. 👋
 
 
