Reduce the size of images and update RSS with correct license

--- a/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
+++ b/posts/2019-12-22-a-year-of-ruby-meetups-in-kitchener.mdx
@@ -18,7 +18,7 @@ The meetup when [Jay El-Kaake](https://github.com/jayelkaake) gave a talk about 
 
 In the workshop focused on [Hacktoberfest](https://www.meetup.com/kw-ruby-on-rails/events/265685895/) I helped a developer to participate and I decided to participate myself which was great. 🌟
 
-<img src="/posts/hacktoberfest-email.png" alt="The email I got saying that I've completed the Hacktoberfest challenge." />
+<img src="/posts/hacktoberfest-email.jpg" alt="The email I got saying that I've completed the Hacktoberfest challenge." />
 
 I missed the talk about Rails and Docker, that was a shame, I wish I could have made for that one.
 
